clusters/production/aprilslilpugs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alp-web
  labels:
    app: alp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alp-web
  template:
    metadata:
      labels:
        app: alp-web
    spec:
      # Block API token and kernel syscalls
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: alp-web
          image: ghcr.io/jonahgcarpenter/aprilslilpugs/aprilslilpugs:v2.2.1
          ports:
            - containerPort: 4000
            - containerPort: 1935

          # Enforcing Principle of Least Privilege
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL

          # Resouce Limits
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          volumeMounts:
            - name: data-volume
              mountPath: /app/data

      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: aprilslilpugs-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alp-web-tunnel
  labels:
    app: alp-web-tunnel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alp-web-tunnel
  template:
    metadata:
      labels:
        app: alp-web-tunnel
    spec:
      # Block API token and kernel syscalls
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2026.10.0
          args:
            - tunnel
            - --no-autoupdate
            - run

          # Resouce Limits
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65532
            capabilities:
              drop:
                - ALL
