clusters/production/aprilslilpugs/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-service
subsets:
  - addresses:
      - ip: 192.168.4.103
    ports:
      - port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: hls-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: hls-service
subsets:
  - addresses:
      - ip: 192.168.4.92
    ports:
      - port: 8080
