clusters/production/aprilslilpugs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alp-web-service
  namespace: aprilslilpugs
spec:
  selector:
    app: alp-web
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: alp-rtmp-service
  namespace: aprilslilpugs
spec:
  selector:
    app: alp-web
  type: LoadBalancer
  loadBalancerIP: "192.168.4.236"
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 1935
      targetPort: 1935
