clusters/production/aprilslilpugs/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: alp-web-lockdown
spec:
  endpointSelector:
    matchLabels:
      app: alp-web
  ingress:
    # Allow external traffic (from your Cloudflare Tunnel/Ingress Controller)
    # to reach the Go web server on port 8080
    - fromEndpoints:
        - matchLabels:
            "app": "alp-web-tunnel"
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP

    # Allow outbound to Gmail SMTP
    - toFQDNs:
        - matchName: "smtp.gmail.com"
      toPorts:
        - ports:
            - port: "587" # Standard SMTP TLS port
              protocol: TCP
            - port: "465" # Standard SMTP SSL port
              protocol: TCP

    # Allow outbound to Local Database
    - toCIDR:
        - "192.168.4.166/24"
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    # Allow outbound to Home Assistant
    - toFQDNs:
        - matchName: "has.carpentersserver.com"
      toPorts:
        - ports:
            - port: "8123" # Standard Home Assistant port
              protocol: TCP

  egress:
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "kube-system"
            "k8s-app": "kube-dns"
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: alp-web-tunnel-lockdown
spec:
  endpointSelector:
    matchLabels:
      app: alp-web-tunnel
  egress:
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "kube-system"
            "k8s-app": "kube-dns"
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"

    # Allow outbound connection to Cloudflare's Edge Network
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
            - port: "7844"
              protocol: TCP
            - port: "443"
              protocol: TCP

    # Allow routing traffic to the portfolio app
    - toEndpoints:
        - matchLabels:
            "app": "alp-web"
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
